# sierpinski-carpet-animation

./: README.md  main.py  main_cli.py  main_gui.py  pyproject.toml  requirements.txt
